format the code

--- a/index.html
+++ b/index.html
@@ -71,14 +71,12 @@
             </section>
         </main>
         <div class="chart">
-            <h2>Income</h2>
+            <h2 style="color:rgb(130, 193, 4);">Income</h2>
             <canvas class="canvas"></canvas>
-            <h2>Expense</h2>
+            <h2 style="color: indianred;">Expense</h2>
         </div>
     </div>
     <script src="js/chart.js"></script>
-
-
     <script src="js/script.js"></script>
 </body>
 
